# stubs

./: .gitignore  .gitmodules  LICENSE  README.md  cabal.project.dist  stubs.cabal
.github/: ci.sh
.github/workflows/: cabalTest.yml  ci.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  examples.md  language.md  overview.md  quickstart.md
docs/src/architecture/: core.md  loader.md  parser.md  translation.md  tyclass.md  wrapper.md
docs/src/ex/: opaque_ex.md  simple_ex.md
src/Loader/Stubs/Loader/ELF/: DecodeError.hs  DynamicLoader.hs  PLTStubDetector.hs  Symbols.hs
src/Parser/Stubs/: Parser.hs
src/Stubs/: FunctionOverride.hs  Lift.hs  Style.hs  Syscall.hs
src/Stubs/Extensions/: Memory.hs
src/Stubs/FunctionOverride/: ArgumentMapping.hs
src/Stubs/FunctionOverride/Extension/: Types.hs
src/Stubs/FunctionOverride/Overrides/: ForwardDeclarations.hs  Printf.hs
src/Stubs/Loader/: BinaryConfig.hs  Versioning.hs
src/Stubs/Memory/: SharedMemory.hs
src/Stubs/Memory/AArch32/: Linux.hs
src/Stubs/Syscall/AArch32/: Linux.hs
src/Stubs/Syscall/Names/AArch32/: Linux.hs
src/Stubs/Syscall/X86_64/: Linux.hs
src/SymbolicExecutor/Stubs/: Discovery.hs  Solver.hs  SymbolicExecution.hs
src/Wrapper/Stubs/Wrapper/: Exception.hs
stubs-common/: CHANGELOG.md  stubs-common.cabal
stubs-common-aarch32/: CHANGELOG.md  stubs-common-aarch32.cabal
stubs-common-aarch32/src/Stubs/Memory/AArch32/: Linux.hs
stubs-common-aarch32/src/Stubs/Syscall/Names/AArch32/: Linux.hs
stubs-common-ppc/: CHANGELOG.md  stubs-common-ppc.cabal
stubs-common-ppc/src/Stubs/FunctionOverride/PPC/: Linux.hs
stubs-common-ppc/src/Stubs/Syscall/Names/: syscall_powerpc.tbl
stubs-common-ppc/src/Stubs/Syscall/Names/PPC32/: Linux.hs
stubs-common-ppc/src/Stubs/Syscall/Names/PPC64/: Linux.hs
stubs-common-x86/: CHANGELOG.md  stubs-common-x86.cabal
stubs-common-x86/src/Stubs/FunctionOverride/X86_64/: Linux.hs
stubs-common-x86/src/Stubs/FunctionOverride/X86_64/Linux/: Specialized.hs
stubs-common-x86/src/Stubs/Memory/X86_64/: Linux.hs
stubs-common-x86/src/Stubs/Syscall/Names/X86_64/: Linux.hs
stubs-common-x86/src/Stubs/Syscall/X86_64/: Linux.hs
stubs-common/src/Stubs/: ABI.hs  Common.hs  Diagnostic.hs  Discovery.hs  EnvVar.hs  Exception.hs  Extensions.hs  FunctionOverride.hs  Logging.hs  Memory.hs  MonadState.hs  Override.hs  Panic.hs  Syscall.hs
stubs-common/src/Stubs/Extensions/: Memory.hs
stubs-common/src/Stubs/FunctionOverride/: ArgumentMapping.hs  Common.hs  Extension.hs  ForwardDeclarations.hs  Overrides.hs  StackArguments.hs
stubs-common/src/Stubs/FunctionOverride/AArch32/: Linux.hs
stubs-common/src/Stubs/FunctionOverride/Extension/: Types.hs
stubs-common/src/Stubs/FunctionOverride/Overrides/: CrucibleStrings.hs
stubs-common/src/Stubs/FunctionOverride/PPC/: Linux.hs
stubs-common/src/Stubs/FunctionOverride/X86_64/: Linux.hs
stubs-common/src/Stubs/Loader/: BinaryConfig.hs  LoadOptions.hs  Relocations.hs
stubs-common/src/Stubs/Memory/: Common.hs
stubs-common/src/Stubs/Memory/AArch32/: Linux.hs
stubs-common/src/Stubs/Memory/PPC/: Linux.hs
stubs-common/src/Stubs/Memory/X86_64/: Linux.hs
stubs-common/src/Stubs/Syscall/: Overrides.hs
stubs-common/src/Stubs/Syscall/AArch32/: Linux.hs
stubs-common/src/Stubs/Syscall/Names/: README  generate_table.py
stubs-common/src/Stubs/Syscall/Names/AArch32/: Linux.hs
stubs-common/src/Stubs/Syscall/Names/PPC32/: Linux.hs
stubs-common/src/Stubs/Syscall/Names/PPC64/: Linux.hs
stubs-common/src/Stubs/Syscall/Names/X86_64/: Linux.hs
stubs-common/src/Stubs/Syscall/Overrides/: Networking.hs  SymIO.hs
stubs-common/src/Stubs/Syscall/Overrides/Networking/: Types.hs
stubs-common/src/Stubs/Syscall/PPC/: Linux.hs
stubs-common/src/Stubs/Syscall/X86_64/: Linux.hs
stubs-common/src/Stubs/Verifier/: Concretize.hs
stubs-loader/: stubs-loader.cabal
stubs-loader/src/Stubs/: EntryPoint.hs  Loader.hs
stubs-loader/src/Stubs/Loader/ELF/: DynamicLoader.hs  PLTStubDetector.hs  Symbols.hs
stubs-loader/src/Stubs/Loader/ELF/Symbols/: AArch32.hs
stubs-parser/: CHANGELOG.md  stubs-parser.cabal
stubs-parser/src/Stubs/: ConcreteParser.y  Lexer.x  Lower.hs  Parser.hs  Token.hs  WeakAST.hs
stubs-parser/src/Stubs/Parser/: Exception.hs
stubs-parser/tests/: Main.hs
stubs-parser/tests/test-data/: broken.stb  brokenClockClient.stb  counter.stb  counterClient.stb  evenOdd.stb  extern.stb  factorial.stb  init.stb  integers.stb  loopFactorial.stb  privateClock.stb  pseudoRandom.stb  ptr.stb  rand.stb  tuple.stb
stubs-translator/: CHANGELOG.md  Parser.md  stubs-translator.cabal
stubs-translator-aarch32/: CHANGELOG.md  stubs-translator-aarch32.cabal
stubs-translator-ppc/: CHANGELOG.md  stubs-translator-ppc.cabal
stubs-translator-x86/: CHANGELOG.md  stubs-translator-x86.cabal
stubs-translator-x86/tests/: Main.hs
stubs-translator/src/Stubs/: AST.hs  Opaque.hs  Preamble.hs  Translate.hs
stubs-translator/src/Stubs/Arch/: AArch32.hs  PPC32.hs  PPC64.hs  X86.hs
stubs-translator/src/Stubs/Preamble/: AArch32.hs  Common.hs  X86.hs
stubs-translator/src/Stubs/Translate/: Core.hs  Intrinsic.hs
stubs-translator/tests/: Main.hs
stubs-wrapper/: CHANGELOG.md  stubs-wrapper.cabal
stubs-wrapper/src/Stubs/: AST.hs  Preamble.hs  Translate.hs  Wrapper.hs
stubs-wrapper/src/Stubs/Preamble/: AArch32.hs  Common.hs  X86.hs
stubs-wrapper/src/Stubs/Translate/: Core.hs  Type.hs
stubs-wrapper/src/Stubs/Wrapper/: Exception.hs
stubs-wrapper/tests/: Main.hs
tests/: Infrastructure.hs  Main.hs  ParserOverrideTests.hs  Pipeline.hs  StubsOverrideTests.hs  StubsStandaloneTests.hs
tests/Stubs/: Solver.hs  SymbolicExecution.hs
tests/test-data/: Makefile  a.out  basic.out  malloc_test.c  mult.out  multiple_ov.c  multiple_ov_i.c  multiple_ov_i.out  nullptr.c  nullptr.out  two.out  two_override.c
tests/test-data/libc-overrides/function/: f.cbl
tools/stubs/: Main.hs
