cabal-version:      2.4
name:               stubs
version:            0.1.0.0
synopsis:
    Stub semantics for program verification

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Matichuk
maintainer:         dmatichuk@galois.com

-- A copyright notice.
-- copyright:
category:           Verification
extra-source-files: CHANGELOG.md

common shared
    build-depends:
        async >= 2 && < 3,
        base >= 4.10 && < 5,
        bytestring,
        bv-sized,
        containers,
        exceptions,
        filepath,
        Glob,
        lens >= 4 && < 6,
        lumberjack >= 1 && < 1.1,
        megaparsec >= 7 && < 10,
        mtl >= 2 && < 3,
        panic >= 0.4 && < 0.5,
        pe-parser,
        parameterized-utils >= 2 && < 3,
        parser-combinators >= 1.2 && < 1.4,
        prettyprinter >= 1.7 && < 1.8,
        prettyprinter-ansi-terminal,
        yaml >= 0.11 && < 0.12,
        text

library stubs-sym-exec 
    import: shared 
    exposed-modules: Stubs.SymbolicExecution,
                     Stubs.Discovery,
                     Stubs.Solver
    hs-source-dirs: src/SymbolicExecutor 
    default-language: Haskell2010 
    ghc-options: -Wall -Wcompat
    build-depends: stubs-common,
                   what4,
                   crucible,
                   crucible-symio,
                   macaw-base,
                   macaw-symbolic,
                   crucible-llvm,
                   macaw-loader,
                   binary-symbols,
                   vector,
                   nonempty-vector

library 
    build-depends: stubs-common,
                   stubs-wrapper,
                   stubs-parser,
                   stubs-sym-exec,
                   stubs-loader
    ghc-options: -Wall -Wcompat
    default-language: Haskell2010 

executable stubs
    import: shared
    main-is:          Main.hs
    other-modules:
                      Paths_stubs
    autogen-modules:  Paths_stubs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        gitrev,
        optparse-applicative,
        stubs

    hs-source-dirs:   tools/stubs
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -threaded -rtsopts "-with-rtsopts=-N"

test-suite stubs-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Infrastructure
  hs-source-dirs: tests
  build-depends: stubs-common,
                 stubs-wrapper,
                 stubs-parser,
                 stubs-sym-exec,
                 stubs-loader,
                 crucible,
                 macaw-base,
                 macaw-symbolic,
                 crucible-syntax,
                 crucible-llvm,
                 what4,
                 directory,
                 tasty,
                 tasty-ant-xml,
                 tasty-expected-failure,
                 tasty-hunit,
                 yaml >= 0.11 && < 0.12
  ghc-options: -Wall -Wcompat
  default-language: Haskell2010
