cabal-version:      2.4
name:               stubs
version:            0.1.0.0
synopsis:
    Stub semantics for program verification

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Matichuk

bug-reports: https://github.com/GaloisInc/stubs/issues
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs

category:           Verification
extra-source-files: CHANGELOG.md

common shared
    build-depends:
        base >= 4.10 && < 5

library
    build-depends: stubs-common,
                   stubs-wrapper,
                   stubs-parser,
                   stubs-loader,
                   stubs-translator
    ghc-options: -Wall -Wcompat
    default-language: Haskell2010

executable stubs
    import: shared
    main-is:          Main.hs
    other-modules:
                      Paths_stubs
    autogen-modules:  Paths_stubs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- build-depends:

    hs-source-dirs:   tools/stubs
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -threaded -rtsopts "-with-rtsopts=-N"

test-suite stubs-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: Infrastructure,
                 Stubs.Solver,
                 Stubs.SymbolicExecution,
                 Pipeline,
                 StubsStandaloneTests,
                 StubsOverrideTests,
                 ParserOverrideTests
  hs-source-dirs: tests
  build-depends: stubs-common,
                 stubs-wrapper,
                 stubs-parser,
                 stubs-loader,
                 stubs-translator,
                 crucible,
                 macaw-base,
                 macaw-symbolic,
                 macaw-x86,
                 macaw-loader,
                 macaw-loader-x86,
                 macaw-x86-symbolic,
                 crucible-llvm,
                 what4,
                 parameterized-utils >= 2 && < 3,

                 bytestring,
                 bv-sized,
                 containers,
                 exceptions,
                 lens >= 4 && < 6,
                 lumberjack >= 1 && < 1.1,
                 mtl >= 2 && < 3,
                 tasty,
                 tasty-hunit,
                 text,
                 vector
  ghc-options: -Wextra -Wcompat
  default-language: Haskell2010
