cabal-version:      2.4
name:               stubs-common
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-common

-- category:
extra-source-files: CHANGELOG.md

common shared
    build-depends:
        base >= 4.10 && < 5,
        bytestring,
        bv-sized,
        containers,
        exceptions,
        filepath,
        lens >= 4 && < 6,
        lumberjack >= 1 && < 1.1,
        megaparsec >= 7 && < 10,
        mtl >= 2 && < 3,
        panic >= 0.4 && < 0.5,
        parameterized-utils >= 2 && < 3,
        parser-combinators >= 1.2 && < 1.4,
        prettyprinter >= 1.7 && < 1.8,
        prettyprinter-ansi-terminal,
        text

library
    import: shared
    exposed-modules:  Stubs.ABI,
                      Stubs.Common,
                      Stubs.Diagnostic,
                      Stubs.Discovery,
                      Stubs.EnvVar,
                      Stubs.Exception,
                      Stubs.Extensions,
                      Stubs.FunctionOverride,
                      Stubs.FunctionOverride.ArgumentMapping,
                      Stubs.FunctionOverride.Common,
                      Stubs.FunctionOverride.Extension,
                      Stubs.FunctionOverride.Extension.Types,
                      Stubs.FunctionOverride.ForwardDeclarations,
                      Stubs.FunctionOverride.StackArguments,
                      Stubs.FunctionOverride.AArch32.Linux,
                      Stubs.FunctionOverride.X86_64.Linux,
                      Stubs.FunctionOverride.X86_64.Linux.Specialized,
                      Stubs.FunctionOverride.PPC.Linux,
                      Stubs.Lift,
                      Stubs.Loader.BinaryConfig,
                      Stubs.Loader.LoadOptions,
                      Stubs.Loader.Relocations,
                      Stubs.Loader.Versioning,
                      Stubs.Logging,
                      Stubs.Memory,
                      Stubs.Memory.Common,
                      Stubs.Memory.SharedMemory,
                      Stubs.Memory.AArch32.Linux,
                      Stubs.Memory.X86_64.Linux,
                      Stubs.Memory.PPC.Linux,
                      Stubs.MonadState,
                      Stubs.Override,
                      Stubs.Panic,
                      Stubs.Style,
                      Stubs.Syscall,
                      Stubs.Syscall.AArch32.Linux,
                      Stubs.Syscall.X86_64.Linux,
                      Stubs.Syscall.PPC.Linux,
                      Stubs.Syscall.Names.X86_64.Linux,
                      Stubs.Syscall.Names.AArch32.Linux,
                      Stubs.Syscall.Names.PPC32.Linux,
                      Stubs.Syscall.Names.PPC64.Linux,
                      Stubs.Verifier.Concretize

    -- Modules included in this library but not exported.
    other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    time,
                      elf-edit,
                      macaw-base,
                      macaw-symbolic,
                      macaw-loader,
                      macaw-loader-x86,
                      semmc-aarch32,
                      macaw-x86,
                      macaw-x86-symbolic,
                      macaw-aarch32,
                      macaw-aarch32-symbolic,
                      dismantle-ppc,
                      semmc-ppc,
                      macaw-ppc,
                      macaw-ppc-symbolic,
                      crucible,
                      crucible-llvm,
                      crucible-syntax,
                      what4,
                      binary-symbols,
                      language-c,
                      nonempty-vector,
                      vector,
                      aeson >= 2

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
