cabal-version:      2.4
name:               stubs-loader
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christian Fontenot
maintainer:         cfontenot@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
    build-depends:
        async >= 2 && < 3,
        base >= 4.10 && < 5,
        bytestring,
        bv-sized,
        containers,
        exceptions,
        filepath,
        Glob,
        lens >= 4 && < 6,
        lumberjack >= 1 && < 1.1,
        megaparsec >= 7 && < 10,
        mtl >= 2 && < 3,
        panic >= 0.4 && < 0.5,
        pe-parser,
        parameterized-utils >= 2 && < 3,
        parser-combinators >= 1.2 && < 1.4,
        prettyprinter >= 1.7 && < 1.8,
        prettyprinter-ansi-terminal,
        yaml >= 0.11 && < 0.12,
        text

library
    import: shared
    exposed-modules: Stubs.Loader,
                     Stubs.EntryPoint,
                     Stubs.Loader.ELF.DecodeError,
                     Stubs.Loader.ELF.DynamicLoader,
                     Stubs.Loader.ELF.Symbols,
                     Stubs.Loader.ELF.Symbols.AArch32
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends: stubs-common,
                   stubs-translator,
                   directory,
                   vector,
                   binary-symbols,
                   asl-translator,
                   dismantle-ppc,
                   what4,
                   crucible,
                   crucible-llvm,
                   macaw-loader,
                   macaw-base,
                   macaw-symbolic,
                   crucible-syntax,
                   elf-edit,
                   nonempty-vector,
                   macaw-loader-x86,
                   macaw-x86,
                   macaw-x86-symbolic,
                   macaw-aarch32,
                   macaw-aarch32-symbolic,
                   macaw-loader-aarch32,
                   macaw-ppc,
                   macaw-ppc-symbolic,
                   macaw-loader-ppc
