cabal-version:      2.4
name:               stubs-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-parser

extra-doc-files: CHANGELOG.md

common shared
    build-depends:
        base >= 4.10 && < 5,
        mtl >= 2 && < 3

library
    import: shared
    exposed-modules: Stubs.Parser,
                     Stubs.Lexer,
                     Stubs.Token,
                     Stubs.WeakAST,
                     Stubs.ConcreteParser,
                     Stubs.Lower,
                     Stubs.Parser.Exception
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends: array,
                   containers,
                   filepath,
                   parameterized-utils >= 2 && < 3,
                   stubs-translator,
                   text
    build-tools: alex, happy

test-suite parser-tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wextra -Wcompat
  build-depends: stubs-parser,
                 stubs-translator,
                 tasty,
                 tasty-hunit
