cabal-version:      2.4
name:               stubs-translator-ppc
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Stubs Language and Crucible Translation for PowerPC

-- A longer description of the package.
description: AST and translation into Crucible for the Stubs language for PowerPC

bug-reports: https://github.com/GaloisInc/stubs/issues
license: BSD-3-Clause
author: Christian Fontenot
maintainer: dmatichuk@galois.com, langston@galois.com, rscott@galois.com
copyright: (c) Galois, Inc 2023-2025

source-repository head
  type: git
  location: https://github.com/GaloisInc/stubs
  subdir: stubs-translator-ppc

extra-doc-files: CHANGELOG.md

library
    exposed-modules:
      Stubs.Arch.PPC32
      Stubs.Arch.PPC64
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wextra -Wcompat
    build-depends:
      base >= 4.10 && < 5,

      crucible,
      crucible-llvm,
      macaw-ppc,
      macaw-ppc-symbolic,
      parameterized-utils >= 2 && < 3,
      what4,

      stubs-translator
